<resources>
    <string name="app_name">MyApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="avatar_uploading">Avatar Uploading</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_welcome">Welcome to Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="regName">Name</string>
    <string name="regEmail">E-mail</string>
    <string name="regPsw">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_now">Already Registered ? Login Now !</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_register_now">Not Registered ? Register Now !</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="my_profile">My Profile</string>
    <string name="avatar">Avatar</string>
    <string name="name">name</string>
    <string name="sent_nfragment">Sent Fragment</string>
    <string name="groups">Groups</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">sign_in</string>
    <string name="my_avatar">My Avatar</string>
    <string name="change_avatar">Change avatar</string>
    <string name="icon_for_full_name">Icon for full name</string>
    <string name="nothing">...</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="icon_for_phone">Icon for phone</string>
    <string name="icon_for_username">Icon for username</string>
    <string name="Username">Username</string>
    <string name="any_details_about_you_age_job_hobbies_etc">Any details about you: age, job, hobbies, etc.</string>
    <string name="edit_fullname">Edit fullname</string>
    <string name="edit_phone">Edit phone</string>
    <string name="edit_username">Edit Username</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="token">Token</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="first_name_optional">First Name (optional)</string>
    <string name="last_name_optional">Last Name (optional)</string>
    <string name="username_required">Username (required)</string>
    <string name="continue_next"><![CDATA[Continue ->]]></string>
    <string name="iconforemail">Icon for email</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="change_your_description">Change Your Description</string>
    <string name="write_something_about_you_age_hobbies_etc">Write something about you: age, hobbies, etc.</string>
    <string name="ok">OK</string>
    <string name="cancel2">CANCEL</string>
    <string name="search">Search</string>
    <string name="group_name_required">Group name (required)</string>
    <string name="add_group">add_group</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="string_contact_list_activity_title">Contacts</string>
    <string name="string_conversation_list_activity_title">Conversations</string>
    <string name="string_create_group_activity_title">New Group</string>
    <string name="string_add_members_activity_title">Add members</string>
    <string name="label_no_conversation_error_title">No conversation!</string>
    <string name="label_no_conversation_error_subtitle">Press the below button to start a new chat!</string>
    <string name="action_create_group">Create group</string>
    <string name="activity_new_group_icon_label">Add\nphoto</string>
    <string name="activity_new_group_group_name_hint_label">Set a group name</string>
    <string name="menu_activity_new_group_action_next">Next</string>
    <string name="add_members_activity_searchview_query_hint">Search contact</string>
    <string name="add_members_activity_contact_already_added_label">Already added to the group</string>
    <string name="add_members_activity_contact_not_added_label">contact is not present in the list</string>
    <string name="activity_add_member_to_chat_group_selected_contacts_title">Selected contacts</string>
    <string name="add_members_activity_contacts_title">Contact List</string>
    <string name="menu_add_members_action_create">Create</string>
    <string name="menu_add_members_action_add_member">@string/activity_group_admin_panel_add_member_title</string>
    <string name="menu_add_members_action_next">Next</string>
    <string name="label_no_contacts_error_title">No contact found</string>
    <string name="label_no_contacts_error_subtitle">Change the search parameters</string>
    <string name="activity_contact_list_error_cannot_create_group_offline_label">You can not create the group if you are offline</string>
    <string name="activity_group_admin_panel_members_label">Members</string>
    <string name="activity_group_admin_panel_group_admin_label">Group Admin</string>
    <string name="activity_group_admin_panel_created_by_label">Created by </string>
    <string name="activity_group_admin_panel_created_on_label">Created on </string>
    <string name="activity_group_admin_panel_group_id_label">id </string>
    <string name="activity_group_admin_panel_not_available_members_label">Information about members are now unavailable</string>
    <string name="activity_group_admin_panel_add_member_title">Add member</string>
    <string name="menu_activity_group_admin_panel_activity_cannot_add_member_offline">Cannot add a member if you are offline</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_btn_label">Remove member</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_btn_label">Leave group</string>
    <string name="bottom_sheet_group_admin_panel_member_see_profile_btn_label">See profile</string>
    <string name="bottom_sheet_group_admin_panel_member_send_message_btn_label">Send message</string>
    <string name="bottom_sheet_group_admin_panel_member_btn_cancel_label">Cancel</string>
    <string name="activity_conversation_list_adapter_you_label">you</string>
    <string name="fragment_conversation_list_my_group_label">Groups</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_title">Remove member</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_message">Do you really want to remove <b>%1$s</b> from the group?</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_alert_message">Do you really want to leave the group</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_positive_click">Remove</string>
    <string name="bottom_sheet_group_admin_panel_member_leave_group_alert_positive_click">Leave</string>
    <string name="bottom_sheet_group_admin_panel_member_remove_member_alert_negative_click">Cancel</string>
    <string name="activity_message_list_group_info_you_label">you</string>
    <string name="activity_message_list_convers_with_presence_online">Online</string>
    <string name="activity_message_list_convers_with_presence_offline">Offline</string>
    <string name="activity_message_list_progress_dialog_upload">Upload in progress..</string>
    <string name="activity_message_list_progress_dialog_upload_failed">Cannot complete the upload</string>
    <string name="activity_message_list_no_message_error_title_label">You have been removed from the group</string>
    <string name="activity_message_list_no_message_error_subtitle_label">Contact the administrator for more details</string>
    <string name="activity_message_list_confirm_dialog_upload_title_label">Send image</string>
    <string name="activity_message_list_confirm_dialog_upload_message_label">Do you want to send this image?</string>
    <string name="activity_message_list_type_image_label">image</string>
    <string name="activity_message_list_type_file_label">file</string>
    <string name="bottom_sheet_attach_images_label">Images</string>
    <string name="bottom_sheet_attach_documents_label">Documents</string>
    <string name="activity_public_profile_presence_online">Online</string>
    <string name="activity_public_profile_presence_offline">Offline</string>
    <string name="activity_group_list_activity_title">My groups</string>
    <string name="activity_my_groups_list_error_title">No groups</string>
    <string name="activity_my_groups_list_error_subtitle">You are not a member of any group</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_title">Delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_message">Do you really want to delete the chat?\n The operation cannot be cancelled.</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_button_label">Delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_positive_button_label">delete chat</string>
    <string name="bottom_sheet_conversation_list_confirm_delete_conversation_alert_positive_button_negative">cancel</string>
    <string name="activity_chat_login_no_account_label">No account?</string>
    <string name="activity_chat_login_signup_label">Sign up</string>
    <string name="activity_choose_chat_group_activity_activity_title">Groups</string>
    <string name="menu_fragment_conversations_list_action_archived">Archived</string>
    <string name="activity_archived_conversation_list_title">Archived</string>
    <string name="row_archived_conversations_textview_reopen">Reopen</string>
    <string name="row_archived_conversations_closed_label">Closed</string>
</resources>