<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_your_description"
                android:textSize="18sp"
                android:textColor="#000"
                android:id="@+id/heading"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:textColor="#000"
                android:hint="@string/write_something_about_you_age_hobbies_etc"
                android:id="@+id/input_about_me"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:id="@+id/action_ok"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel2"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:id="@+id/action_cancel"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>