<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/fragmentProfile"
             tools:context=".fragments.ProfileFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        app:srcCompat="@mipmap/ic_launcher_avatarr"
                        android:id="@+id/iv_icon_fullname"
                        android:contentDescription="@string/icon_for_full_name"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/nothing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:id="@+id/tv_fullname"/>
                    <TextView
                            android:text="@string/full_name"
                            android:layout_width="182dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:id="@+id/tv_label_for_fullname"/>
                </LinearLayout>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        android:id="@+id/ib_edit_fullname"
                        android:contentDescription="@string/edit_fullname"/>
            </TableRow>
            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/child_margin_top"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        app:srcCompat="@android:drawable/ic_menu_call"
                        android:id="@+id/iv_icon_phone"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/icon_for_phone"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/nothing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:id="@+id/tv_phone"/>
                    <TextView
                            android:text="@string/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey"
                            android:textSize="15sp"
                            android:id="@+id/tv_label_for_phone"/>
                </LinearLayout>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        android:id="@+id/ib_edit_phone"
                        android:contentDescription="@string/edit_phone"/>
            </TableRow>
            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/child_margin_top"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        app:srcCompat="@mipmap/ic_launcher_foreground"
                        android:id="@+id/iv_icon_username"
                        android:contentDescription="@string/icon_for_username"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/nothing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:id="@+id/tv_username_in_profile"/>
                    <TextView
                            android:text="@string/Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/grey"
                            android:id="@+id/tv_label_for_username"/>
                </LinearLayout>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        android:id="@+id/ib_edit_username"
                        android:contentDescription="@string/edit_username"/>
            </TableRow>
            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/child_margin_top"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        app:srcCompat="@android:drawable/sym_action_email"
                        android:id="@+id/iv_icon_email"
                        android:contentDescription="@string/iconforemail"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/nothing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:id="@+id/tv_email"/>
                    <TextView
                            android:text="E-mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/grey"
                            android:id="@+id/tv_label_for_email"/>
                </LinearLayout>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"

                        app:srcCompat="@android:drawable/ic_menu_edit"
                        android:id="@+id/ib_edit_email"
                        android:contentDescription="Edit e-mail"/>
            </TableRow>
            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/child_margin_top"
            >
                <TextView/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_marginStart="-80dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/nothing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:id="@+id/tv_about_me"/>
                    <TextView
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="About me"
                            android:textSize="15sp"
                            android:textColor="@color/grey"
                            android:background="@null"
                            android:id="@+id/tv_label_about_me"/>
                </LinearLayout>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        android:id="@+id/ib_edit_about_me"
                        android:contentDescription="About me"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</FrameLayout>