<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:id="@+id/new_profile"
                                                   android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="MissingConstraints"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:text="@string/my_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:id="@+id/tv_profile"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_profile"
                android:layout_marginTop="@dimen/child_margin_top">
            <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_required"
                    android:inputType="textPassword" android:autofillHints=""/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_username"
                android:layout_marginTop="@dimen/child_margin_top">
            <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First name"
                    android:inputType="textPassword" android:autofillHints=""/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_firstname"
                android:layout_marginTop="@dimen/child_margin_top">
            <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last name"
                    android:inputType="textPassword" android:autofillHints=""/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_lastname"
                android:layout_marginTop="@dimen/child_margin_top">
            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textPassword" android:autofillHints=""/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_email"
                android:layout_marginTop="@dimen/child_margin_top">
            <EditText
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="About"
                    android:inputType="textPassword" android:autofillHints=""/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36dp"

                android:id="@+id/btn_continue_reg"
                android:text="@string/continue_next"

        />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
